# plotting_examples

./: .gitignore  .pre-commit-config.yaml  .venv  Makefile  README.md  dvc.yaml  generate_readme.py  mypy.ini  pyproject.toml  setup.cfg  work.sh
plotting_examples/: __init__.py  dvc_entry.py  extract_year_name.py  rc.mplstyle  save_plot_output.py
plotting_examples/y2022/: __init__.py  metadata.py
plotting_examples/y2022/bar_plot_w_custom_cmap/: __init__.py  plot.py
plotting_examples/y2022/binary_outcome_variable/: __init__.py  data.csv  plot.py
plotting_examples/y2022/box_plot_w_scatter_distributions/: __init__.py  data.parquet  plot.py
plotting_examples/y2022/default_plot/: __init__.py  plot.py
plotting_examples/y2022/histogram_with_two_variables/: __init__.py  plot.py
plotting_examples/y2022/line_plot_fill_between/: __init__.py  data.csv  plot.py
plotting_examples/y2022/meaningless_points/: __init__.py  plot.py
plotting_examples/y2022/opinium_barchart/: __init__.py  plot.py
plotting_examples/y2022/pandas_stacked_bars_with_values/: __init__.py  plot.py
plotting_examples/y2022/pos_neg_split_hbar/: __init__.py  plot.py
plotting_examples/y2022/scatter_distributions/: __init__.py  plot.py
plotting_examples/y2022/scatter_matrix_w_kde_on_diag/: __init__.py  plot.py
plotting_examples/y2022/scatter_w_outlined_text_insert/: __init__.py  data.parquet  plot.py
plotting_examples/y2022/sns_violin_plot_custom/: __init__.py  data.parquet  plot.py
plotting_examples/y2022/split_x_axis_custom_legend/: __init__.py  plot.py
plotting_examples/y2022/stacked_bar_with_single_bars_layout/: __init__.py  plot.py
plotting_examples/y2022/uk_hexmap/: __init__.py  plot.py  uk_hex_example.py
plotting_examples/y2022/uk_hexmap/data/: petition_data.csv  petition_data.json
plotting_examples/y2022/uk_hexmap/data/gb_hex_cartogram/: GB_Hex_Cartogram_Const.shp.xml
plotting_examples/y2024/: __init__.py  metadata.py
plotting_examples/y2024/cat_weight/: __init__.py  plot.py
plotting_examples/y2024/cat_weight/data/: weight_data.parquet
requirements/: base.in  base.txt
